--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -330,7 +330,7 @@
 
 
     <!-- Phân trang -->
-    <div class="d-flex justify-content-between mt-3">
+    @* <div class="d-flex justify-content-between mt-3">
         <div>Total: 3,145</div>
         <div>
             <select class="form-select form-select-sm w-auto d-inline-block">
@@ -350,6 +350,26 @@
                 </ul>
             </nav>
         </div>
+    </div> *@
+    <div>
+        Trang @(Model.pageNumber) / @(Model.pageCount)
+    </div>
+    <div class="d-flex justify-content-center">
+        <ul class="pagination">
+            <li class="page-item @(Model.pageNumber == 1 ? "disabled": "")">
+                <a class="page-link" asp-controller="Admin" asp-action="ProductsManager" asp-route-page="@(Model.pageNumber - 1)"> Previous </a>
+            </li>
+            @for (var pg = 1; pg <= Model.pageCount; pg++)
+            {
+                <li class="page-item @(pg == Model.pageNumber ? "active" :"")">
+                    <a class="page-link" asp-controller="Admin" asp-action="ProductsManager" asp-route-page="@pg"> @pg </a>
+                </li>
+            }
+            <li class="page-item @(Model.pageNumber == Model.pageCount ? "disabled": "")">
+                <a class="page-link" asp-controller="Admin" asp-action="ProductsManager" asp-route-page="@(Model.pageNumber + 1)"> Next </a>
+            </li>
+        </ul>
+
     </div>
 </div>
 
