--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -100,9 +100,9 @@
                 </li>
 
                 <li class="nav-item m-2">
-                    <form action="CensorshipManager" method="get">
-                        <button id="censorship-manager-btn" class="nav-link text-start border-0 w-100">
-                            <span class="p-2 fs-6 fw-bold">Censorship Manager</span>
+                    <form action="CommentManager" method="get">
+                        <button id="comment-manager-btn" class="nav-link text-start border-0 w-100">
+                            <span class="p-2 fs-6 fw-bold">Comment Manager</span>
                         </button>
                     </form>
                 </li>
@@ -206,8 +206,8 @@
             $('#orders-manager-btn').addClass('active');
         } else if (currentPath.includes("CategoriesManager")) {
             $('#categories-manager-btn').addClass('active');
-        } else if (currentPath.includes("CensorshipManager")) {
-            $('#censorship-manager-btn').addClass('active');
+        } else if (currentPath.includes("CommentManager")) {
+            $('#comment-manager-btn').addClass('active');
         }
 
         // Khi DOM đã sẵn sàng
