--- a/Project/Client/Views/Admin/DeleteProduct.cshtml
+++ b/Project/Client/Views/Admin/DeleteProduct.cshtml
@@ -26,7 +26,17 @@
         <dd class="col-sm-10">@Model.Sold</dd>
 
         <dt class="col-sm-2">Interactions</dt>
-        <dd class="col-sm-10">@Model.Interactions</dd>
+        <dd class="col-sm-10">
+            @if (Model.Interactions != null)
+            {
+                <p>Likes: @Model.Interactions.NumberOfLikes</p>
+                <p>Views: @Model.Interactions.NumberOfViews</p>
+            }
+            else
+            {
+                <p>No interactions available</p>
+            }
+        </dd>
 
         <dt class="col-sm-2">Discount</dt>
         <dd class="col-sm-10">@Model.Discount</dd>
@@ -35,10 +45,36 @@
         <dd class="col-sm-10">@Model.Platform</dd>
 
         <dt class="col-sm-2">Links</dt>
-        <dd class="col-sm-10">@Model.Links</dd>
+        <dd class="col-sm-10">
+            @if (Model.Links != null && Model.Links.Any())
+            {
+                @foreach (var link in Model.Links)
+                {
+                    <a href="@link.Url" target="_blank">@link.Url</a>
+
+                    <br />
+                }
+            }
+            else
+            {
+                <p>No links available</p>
+            }
+        </dd>
 
         <dt class="col-sm-2">Categories</dt>
-        <dd class="col-sm-10">@Model.Categories</dd>
+        <dd class="col-sm-10">
+            @if (Model.Categories != null && Model.Categories.Any())
+            {
+                @foreach (var category in Model.Categories)
+                {
+                    @category.CategoryName
+                }
+            }
+            else
+            {
+                <p>No categories available</p>
+            }
+        </dd>
 
         <dt class="col-sm-2">Status</dt>
         <dd class="col-sm-10">@Model.Status</dd>
