call get all order

--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -174,7 +174,7 @@
 
 	<!-- Phân trang -->
 	<div class="d-flex justify-content-between mt-3">
-		<div>Total: 3,145</div>
+		<div>Total: @Model.Users.Count()</div>
 		<div>
 			<select class="form-select form-select-sm w-auto d-inline-block">
 				<option>20 records per page</option>
