--- a/Project/Client/Views/Admin/OrdersManager.cshtml
+++ b/Project/Client/Views/Admin/OrdersManager.cshtml
@@ -12,7 +12,7 @@
     <!-- Thanh tìm kiếm và nút Thêm -->
     <div class="d-flex justify-content-between mb-3">
         <form asp-action="SearchOrder" method="get" class="col-md-4">
-            <input asp-for= class="form-control" type="text" placeholder="Search by..." />
+            <input class="form-control" type="text" placeholder="Search by..." />
         </form>
        @*  <div>
             <button class="btn btn-success" data-toggle="modal" data-target="#modalOrder">+ Add</button>
