--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -115,7 +115,7 @@
         <form asp-action="SearchProduct" asp-controller="Admin" method="post">
             <input class="form-control" type="text" placeholder="Search by..." name="searchString" />
         </form>
-        <div>
+        <div>   
             <button class="btn btn-success" data-toggle="modal" data-target="#modalProduct">+ Add</button>
         </div>
     </div>
@@ -133,6 +133,8 @@
         <thead class="table-light">
             <tr>
                 <th scope="col"><input type="checkbox" id="selectAll"></th>
+                <th scope="col">Qr Code</th>
+               @*  <th scope="col">Bar Code</th> *@
                 <th scope="col">Id</th>
 
                 <th scope="col">Name</th>
@@ -159,14 +161,20 @@
             {
                 <tr>
                     <td><input type="checkbox" class="product-checkbox"></td>
+                    <td>
+                        <img src="@product.QrCode" alt="QR Code" width="100" height="100" />
+                    </td>
+                   @*  <td>
+                        <img src="@product.BarCode" alt="Bar Code" width="100" height="100" />
+                    </td> *@
                     <td>@product.Id</td>
                     <td>@product.Name</td>
                     <td>@product.Description</td>
                     <td>@product.Price.ToString("C")</td>
                     <td>@product.Sold</td>
                     <td>
-                        <div>Likes: @product.Interactions?.NumberOfLikes ?? 0</div>
-                        <div>Views: @product.Interactions?.NumberOfViews ?? 0</div>
+                        <div>Likes: @product.Interactions?.NumberOfLikes</div>
+                        <div>Views: @product.Interactions?.NumberOfViews</div>
                     </td>
                     <td>@product.Discount %</td>
                     <td>@product.Platform</td>
@@ -177,7 +185,16 @@
                             <ul>
                                 @foreach (var link in product.Links)
                                 {
-                                    <li>@link.Url</li>
+                                    if (link.ProviderName == "Google Drive")
+                                    {
+                                        <a href="@link.Url">
+                                            File game
+                                        </a>
+                                    }
+                                    else
+                                    {
+                                        <img src="@link.Url" width="50px" height="50px"/>
+                                    }                                  
                                 }
                             </ul>
                         }
