--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -174,22 +174,38 @@
 
 	<!-- Phân trang -->
 	<div class="d-flex justify-content-between mt-3">
-		<div>Total: 3,145</div>
+		<div>Total: @(Model.totalItem) items</div>
 		<div>
-			<select class="form-select form-select-sm w-auto d-inline-block">
-				<option>20 records per page</option>
-				<option>50 records per page</option>
-				<option>100 records per page</option>
-			</select>
+			<form method="get" asp-controller="Admin" asp-action="UsersManager" class="d-inline">
+				<select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+					<option>Select records per page</option>
+					<option value="3">3 records per page</option>
+					<option value="5">5 records per page</option>
+					<option value="10">10 records per page</option>
+				</select>
+				<input type="hidden" name="page" value="1" />
+			</form>
+
 			<nav aria-label="Page navigation example" class="d-inline-block">
 				<ul class="pagination pagination-sm mb-0">
-					<li class="page-item disabled">
-						<a class="page-link" href="#">1 to 20</a>
+					<li class="page-item @(Model.pageNumber == 1 ? "disabled" : "")">
+						<a class="page-link" asp-controller="Admin" asp-action="UsersManager" asp-route-page="@(Model.pageNumber - 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+							Previous
+						</a>
 					</li>
-					<li class="page-item"><a class="page-link" href="#">1</a></li>
-					<li class="page-item"><a class="page-link" href="#">2</a></li>
-					<li class="page-item"><a class="page-link" href="#">3</a></li>
-					<li class="page-item"><a class="page-link" href="#">></a></li>
+					@for (var pg = 1; pg <= Model.pageCount; pg++)
+					{
+						<li class="page-item @(pg == Model.pageNumber ? "active" : "")">
+							<a class="page-link" asp-controller="Admin" asp-action="UsersManager" asp-route-page="@pg" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+								@pg
+							</a>
+						</li>
+					}
+					<li class="page-item @(Model.pageNumber == Model.pageCount ? "disabled" : "")">
+						<a class="page-link" asp-controller="Admin" asp-action="UsersManager" asp-route-page="@(Model.pageNumber + 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+							Next
+						</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
@@ -396,8 +412,10 @@
 @* Modal *@
 
 
+
+@* Code Lỗi *@
 @* Đây là add *@
-<div class="modal fade" id="modalUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+@* <div class="modal fade" id="modalUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-xl">
 		<div class="modal-content">
 			<div class="container-fluid p-5">
@@ -406,7 +424,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> *@ 
 
 @* Đây là add *@
 <div class="modal fade" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
