--- a/Project/Client/Views/Admin/OrdersManager.cshtml
+++ b/Project/Client/Views/Admin/OrdersManager.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     Layout = "_LayoutAdmin";
 }
+
 @using Client.Models.OrderModel;
-@model ICollection<OrderModel>
+@model OrderViewModel
 <div class="pt-3 pb-4">
     <span class="titleManager bg-success py-3 px-5 rounded-4 fw-bold text-white">Orders Manager</span>
 </div>
@@ -47,7 +48,7 @@
         <tbody>
             @if (Model != null)
             {
-                foreach (var order in Model)
+                foreach (var order in Model.Orders)
                 {
                     <tr>
                         @*             <td><input type="checkbox" class="order-checkbox"></td> *@
@@ -62,11 +63,13 @@
                         <td scope="col" title="@order.UpdatedAt" style="max-width:90px" class="text-truncate">@order.UpdatedAt</td>
                         <td scope="col" title="@order.CustomerId" style="max-width:90px" class="text-truncate">@order.CustomerId</td>
                         <td>
-                            <a class="edit p-1" href="javascript:void(0);"
-                               data-url="@Url.Action("OrderDetail", "Admin", new { Id = @order.Id })"
-                               onclick="showEditModal(this)" title="Order Detail">
+                            <a href="javascript:void(0);"
+                               data-url="@Url.Action("OrderDetail", "Admin", new { id = order.Id })"
+                               onclick="showDetailModal(this)"
+                               title="Order Detail">
                                 <i class="fa-solid fa-pen-to-square" style="color:#0b3d0d"></i>
                             </a>
+
 
                         </td>
 
@@ -88,7 +91,7 @@
 
     <!-- Phân trang -->
     <div class="d-flex justify-content-between mt-3">
-        <div>Total: @Model.Count()</div>
+        <div>Total: @Model.Orders.Count()</div>
         <div>
             <select class="form-select form-select-sm w-auto d-inline-block">
                 <option>20 records per page</option>
@@ -116,81 +119,26 @@
 
 
 @* Modal *@
-<div class="modal fade" id="modalOrderDetail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-            <div class="container-fluid p-5">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="row">
-                    <div class="col">
-                        <div class="mb-2">
-                            <label class="form-label">Email address</label>
-                            <input type="email" class="form-control">
-                            <span class="text-danger"></span>
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">Email address</label>
-                            <input type="email" class="form-control">
-                            <span class="text-danger"></span>
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">Email address</label>
-                            <input type="email" class="form-control">
-                            <span class="text-danger"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="modalContainer"></div>
-
-
-
+<div id="modalContainer"></div> <!-- Modal container để load nội dung partial -->
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
 <script>
-    $(document).ready(function () {
-        function showDetailModal(element) {
-            var url = $(element).data('url');
-            console.log("URL: " + url);
+    function showDetailModal(element) {
+        var url = $(element).data('url');
 
-            $.ajax({
-                url: url,
-                type: 'GET',
-                success: function (response) {
-                    $('#modalContainer').html(response);
-                    $('#modalOrderDetail').modal('show');
-                },
-                error: function () {
-                    alert('Có lỗi xảy ra khi tải nội dung modal.');
-                }
-            });
-        }
-
-        function showEditModal(element) {
-            var url = $(element).data('url');
-            console.log("URL: " + url);
-
-            $.ajax({
-                url: url,
-                type: 'GET',
-                success: function (response) {
-                    $('#modalContainer').html(response);
-                    $('#editModalAccount').modal('show');
-                },
-                error: function () {
-                    alert('Có lỗi xảy ra khi tải nội dung modal.');
-                }
-            });
-        }
-
-        window.showDetailModal = showDetailModal;  // Gán hàm vào window
-        window.showEditModal = showEditModal;      // Gán hàm vào window
-    });
+        $.ajax({
+            url: url,
+            type: 'GET',
+            success: function (response) {
+                $('#modalContainer').html(response); // Thêm nội dung partial vào modalContainer
+                $('#modalOrderDetail').modal('show'); // Hiển thị modal
+            },
+            error: function () {
+                alert('Có lỗi xảy ra khi tải nội dung modal.');
+            }
+        });
+    }
 </script>
