newComment, newCreate/Update-Product

--- a/Project/Client/Views/Admin/CommentDelete.cshtml
+++ b/Project/Client/Views/Admin/CommentDelete.cshtml
@@ -22,7 +22,7 @@
                 <p class="card-text">Content: @comment.Content</p>
                 <p class="card-text">Number Of Likes: @comment.NumberOfLikes</p>
                 <p class="card-text">Status: @comment.Status</p>
-                <p class="card-text">UserId: @comment.UserId</p>
+                <p class="card-text">UserId: @comment.UserName</p>
                 <p class="card-text">ProductId: @comment.ProductId</p>
                 <p class="card-text">ParentId: @comment.ParentId</p>
                 <p class="card-text">Created At: @comment.CreatedAt</p>
