--- a/Project/Client/Views/Admin/CommentManager.cshtml
+++ b/Project/Client/Views/Admin/CommentManager.cshtml
@@ -105,7 +105,7 @@
                         <td>@comment.Content</td>
                         <td>@comment.NumberOfLikes</td>
                         <td>@comment.Status</td>
-                        <td>@comment.UserId</td>
+                        <td>@comment.UserName</td>
                         <td>@comment.ProductId</td>
                         <td>@comment.ParentId</td>
                         <td>@comment.CreatedAt</td>
