--- a/Project/Client/Views/Admin/CreateComment.cshtml
+++ b/Project/Client/Views/Admin/CreateComment.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="mb-2">
-                <label asp-for="UserId" class="form-label">UserId</label>
-                <input asp-for="UserId" type="text" placeholder="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label asp-for="UserName" class="form-label">UserId</label>
+                <input asp-for="UserName" type="text" placeholder="UserId" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="mb-2">
                 <label asp-for="ProductId" class="form-label">ProductId</label>
