--- a/Project/Client/Views/Admin/UpdateComment.cshtml
+++ b/Project/Client/Views/Admin/UpdateComment.cshtml
@@ -40,9 +40,9 @@
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="UserId">UserId</label>
-        <textarea asp-for="UserId" class="form-control" rows="3"></textarea>
-        <span asp-validation-for="UserId" class="text-danger"></span>
+        <label asp-for="UserName">UserId</label>
+        <textarea asp-for="UserName" class="form-control" rows="3"></textarea>
+        <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="ProductId">ProductId</label>
