--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <!-- Các nút điều hướng -->
                         <ul class="navbar-nav d-flex align-items-center">
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" id="navbarDropdown1" role="button">
+                                <a class="nav-link btn fw-bold" id="navbarDropdown1" asp-controller="Product" asp-action="Product" role="button">
                                     Products
                                 </a>
                             </li>
